<resources>
    <string name="app_name">eslammovieapp</string>
    <string name="action_setting">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="action_settings">Settings</string>

    <string name="SORTING_KEY" translatable="false">SORTING_ORDER_KEY</string>
    <string name="DEFAULT_ORDER" translatable="false">popular</string>
    <string name="SORTING_POPULAR" translatable="false">popular</string>
    <string name="SORTING_TOP_RATED" translatable="false">top rated</string>
    <string name="SORTING_FAVOURITES" translatable="false">favourites</string>

    <string name="action_popular">Popular</string>
    <string name="action_rate">Top Rated</string>
    <string name="action_favoirate">Favourite</string>
    <string name="reviews" />
    <string name="DetailsActivity"></string>
    <string name="ic_youtube">ic_YouTube</string>
    <string name="movie_title">MovieTitle</string>
    <string name="movie_review">Movie Review</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="movie_rate">Movie Rate</string>
    <string name="preference_file_key" />

</resources>
